send verification code
